Some refinements to robot trace